test/neg/ebind-elim2.smt2_
; Uninterpreted Sorts
(declare-sort List 1)


; Constants


; Distinct Constants


; Uninterpreted Functions


; Qualifiers


; Well-formedness constraints
(wf $k_$35$$35$1 ((VV Tuple)(a Int)))


; Horn constraints
(constraint (forall ((a Int)(c Int)(v1 Int)) (=> (and True (and True (= v1 c))) ($k_$35$$35$1 v1 a))))
(constraint (forall ((a Int)(c Int)(v2 Int)) (=> (and True (and True ($k_$35$$35$1 v2 a))) (= v2 c))))
(constraint (forall ((v3 Int)) (=> ($k_$35$$35$1 v3 a) (= v3 0))))
